RESOLVED FIXED220666
REGRESSION(r267763) Uploading zipped directories does not work on iOS
https://bugs.webkit.org/show_bug.cgi?id=220666
Summary REGRESSION(r267763) Uploading zipped directories does not work on iOS
Alex Christensen
Reported 2021-01-15 13:33:39 PST
REGRESSION(r267763) Uploading zipped directories does not work on iOS
Attachments
Patch (6.03 KB, patch)
2021-01-15 13:41 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-01-15 13:41:06 PST
Alex Christensen
Comment 2 2021-01-15 13:41:09 PST
Geoffrey Garen
Comment 3 2021-01-15 14:38:19 PST
Comment on attachment 417730 [details] Patch r=me
EWS
Comment 4 2021-01-15 14:58:06 PST
Committed r271537: <https://trac.webkit.org/changeset/271537> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417730 [details].
Note You need to log in before you can comment on or make changes to this bug.